# databank

./: Makefile  README.rst  README.rst.fstr  out.txt  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
databank/: __init__.py  databank.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_databank.py
